Fix bug on firefox where userimage was misplaced

--- a/styles/transfermarkt.css
+++ b/styles/transfermarkt.css
@@ -72,7 +72,7 @@ div.TransferMarket.inner {
 
 .playerGroup .playerRow .infoBox .ownerImage > img {
   object-fit: cover;
-  height: 100% !important;
+  height: 32px !important;
   width: auto !important;
 }
 
